--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,9 @@ canvas {
 
 .testing {
   background-color: #1a2c47;
+  background-color: #b9e972;
+  background-color: #a78ae2;
+  background-color: #ec9357;
 }
 
 /* ----------------------------------- */
