--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,8 @@ canvas {
   background-color: #b9e972;
   background-color: #a78ae2;
   background-color: #ec9357;
+  background-color: #7ad47a;
+  background-color: #e77247;
 }
 
 /* ----------------------------------- */
