--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,7 @@ canvas {
   background-color: #ec9357;
   background-color: #7ad47a;
   background-color: #e77247;
+  background-color: #acb6c0;
 }
 
 /* ----------------------------------- */
