--- a/src/index.css
+++ b/src/index.css
@@ -50,6 +50,7 @@ canvas {
   background-color: #7ad47a;
   background-color: #e77247;
   background-color: #acb6c0;
+  background-color: #a888e9;
 }
 
 /* ----------------------------------- */
