--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,8 @@ body,
   /*  */
   /* background: lightskyblue; */
   /* background: crimson; */
+
+  background: ivory;
 }
 
 canvas {
@@ -63,3 +65,78 @@ canvas {
   border-radius: 20px;
   background: #000000;
 } */
+
+/* Interface */
+.interface {
+  /* border: black solid 12px; */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  /* --------------------- */
+  pointer-events: none;
+  /* --------------------- */
+  font-family: "Bebas Neue", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+/* font for interface, I already applied it above */
+/* .bebas-neue-regular {
+  font-family: "Bebas Neue", serif;
+  font-weight: 400;
+  font-style: normal;
+} */
+
+.time {
+  position: absolute;
+  top: 15%;
+  left: 0;
+  width: 100%;
+  color: #ffffff;
+  font-size: 6vh;
+  background: #00000033;
+  padding-top: 5px;
+  text-align: center;
+}
+
+.restart {
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  top: 40%;
+  left: 0;
+  width: 100%;
+  color: #ffffff;
+  font-size: 80px;
+  pointer-events: auto;
+  cursor: pointer;
+}
+
+.controls {
+  position: absolute;
+  bottom: 10%;
+  left: 0;
+  width: 100%;
+}
+.controls .raw {
+  display: flex;
+  justify-content: center;
+}
+
+.controls .key {
+  width: 40px;
+  height: 40px;
+  margin: 4px;
+  border: 2px solid #ffffff;
+  background: #ffffff44;
+}
+
+.controls .key.large {
+  width: 144px;
+}
+
+.controls .key.active {
+  background: #ffffff99;
+}
